# ideation-cric-summary-gen

./: .gitignore  README.md  mainnn.py  pyproject.toml  report.md  requirements.txt  run_streamlit.py  streamlit_app.py
src/hello_world/: crew.py  main.py
src/hello_world/config/: agents.yaml  tasks.yaml
src/hello_world/tools/: cricket_api_tools.py  custom_tool.py  j.py  safe_bedrock_chat_llm.py  static_llm_wrapper.py
