[project]
name = "hello_world"
version = "0.1.0"
description = "hello-world using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3>=1.39.13",
    "crewai[tools]>=0.141.0,<1.0.0",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.29",
    "streamlit>=1.28.0",
]

[project.scripts]
hello_world = "hello_world.main:run"
run_crew = "hello_world.main:run"
train = "hello_world.main:train"
replay = "hello_world.main:replay"
test = "hello_world.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
